--- a/BankAPPServlets/.classpath
+++ b/BankAPPServlets/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry kind="lib" path="C:/oraclexe/app/oracle/product/10.2.0/server/jdbc/lib/ojdbc14_g.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Hector/Downloads/json-simple-1.1.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Hector/Desktop/gson-2.2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Hector/Desktop/Training Material/JEE Tools (1-20-15)/Useful JAR files/log4j/log4j-1.2.9.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
